--- a/sass/main.scss
+++ b/sass/main.scss
@@ -289,6 +289,7 @@ article {
 		&:hover {
 			i {
 				 -webkit-animation: wobble 0.8s;
+				 animation: wobble 0.8s;
 			}
 			opacity: 1;
 		}
@@ -324,6 +325,7 @@ article {
 		}
 		&:hover {
 			-webkit-animation: pulse 0.8s;
+			animation: pulse 0.8s;
 		}
 	}
 	.showover {
@@ -416,6 +418,7 @@ article {
 	h2 {
 		color: $red;
 		-webkit-animation: hue 1s infinite linear;
+		animation: hue 1s infinite linear;
 		margin: 200px 0;
 	}
 	i, 
@@ -613,14 +616,15 @@ footer {
 		text-align: center;
 		h2 {
 			display: none;
-			transform: rotate(15deg);
 			-webkit-transform: rotate(-15deg);
+			transform: rotate(15deg);
 			position: relative;
 			top: 255px;
 			left: 100px;
 			color: $red;
 			height: 0px;
 			-webkit-animation: hue 1s infinite linear;
+			animation: hue 1s infinite linear;
 			margin: 0px;
 		}
 		.icon-cog {
@@ -628,29 +632,21 @@ footer {
 			margin: 0;
 			padding: 0;
 			position: relative;
+			 
 			-webkit-transform-origin: 50% 52.6%; //correction, I dont know why
-			&.cog1 {
+			transform-origin: 50% 52.6%;
+			-webkit-animation: rotatingcw 10s infinite linear;
+			animation: rotatingcw 10s infinite linear;
+						&.cog1 {
 				font-size: 170px;
-				-webkit-animation-name:             rotatingccw; 
-				-webkit-animation-duration:         10s; 
-				-webkit-animation-iteration-count:  infinite;
-				-webkit-animation-timing-function:  linear;
 				left: 118px;
 				top: 20px;
 			}
 			&.cog2 {
 				font-size: 200px;
-				-webkit-animation-name:             rotatingcw; 
-				-webkit-animation-duration:         10s; 
-				-webkit-animation-iteration-count:  infinite;
-				-webkit-animation-timing-function:  linear;
 			}
 			&.cog3 {
 				font-size: 130px;
-				-webkit-animation-name:             rotatingcw; 
-				-webkit-animation-duration:         10s; 
-				-webkit-animation-iteration-count:  infinite;
-				-webkit-animation-timing-function:  linear;
 				right: 358px;
 				top: 125px;
 			}
@@ -670,20 +666,23 @@ footer {
 			    height: 100px;
 			    width: 2px;
 			    top: 45px;
+			    animation: hue 5s infinite linear;
 			    -webkit-animation: hue 5s infinite linear;
 			    
 		    }
+		   animation: rotatingcw 10s infinite linear;
 		   -webkit-animation: rotatingcw 10s infinite linear;
-		    animation: rotatingcw 10s infinite;
 		}
 		.handarrow {
 			position: absolute;
 			top: 121px;
 			font-size: 200%;
 			width: 22px;
+			transform: rotate(-180deg);
 			-webkit-transform: rotate(-180deg);
 			left: 2px;
 			color: $red;
+			animation: hue 5s infinite linear;
 			-webkit-animation: hue 5s infinite linear;
 			
 		}
