--- a/sass/main.scss
+++ b/sass/main.scss
@@ -683,10 +683,11 @@ footer {
 //WIDE SCREEN
 @media only screen and (min-width: 980px) {
 	#show-all{
-		color: $grey;
-		float: right;
-		margin-right: 15px;
+		color: #ccc;
 		display: inline;
+		text-align: center;
+		position: absolute;
+		text-indent: 50px;
 	}
 	.frontendlist,
 	.backendlist {
