--- a/css/jamessimofonts.css
+++ b/css/jamessimofonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'jamessimofont';
-  src: url('../font/jamessimofont.eot?83791913');
-  src: url('../font/jamessimofont.eot?83791913#iefix') format('embedded-opentype'),
-       url('../font/jamessimofont.woff?83791913') format('woff'),
-       url('../font/jamessimofont.ttf?83791913') format('truetype'),
-       url('../font/jamessimofont.svg?83791913#jamessimofont') format('svg');
+  src: url('../font/jamessimofont.eot?72674688');
+  src: url('../font/jamessimofont.eot?72674688#iefix') format('embedded-opentype'),
+       url('../font/jamessimofont.woff?72674688') format('woff'),
+       url('../font/jamessimofont.ttf?72674688') format('truetype'),
+       url('../font/jamessimofont.svg?72674688#jamessimofont') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'jamessimofont';
-    src: url('../font/jamessimofont.svg?83791913#jamessimofont') format('svg');
+    src: url('../font/jamessimofont.svg?72674688#jamessimofont') format('svg');
   }
 }
 */
@@ -50,73 +50,63 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-wechat:before { content: '\e800'; } /* '' */
-.icon-music:before { content: '\e801'; } /* '' */
-.icon-mail-alt:before { content: '\e802'; } /* '' */
-.icon-heart:before { content: '\e803'; } /* '' */
-.icon-star:before { content: '\e804'; } /* '' */
-.icon-share:before { content: '\e805'; } /* '' */
-.icon-picture:before { content: '\e806'; } /* '' */
-.icon-camera:before { content: '\e807'; } /* '' */
-.icon-th:before { content: '\e808'; } /* '' */
-.icon-help:before { content: '\e809'; } /* '' */
-.icon-info:before { content: '\e80a'; } /* '' */
-.icon-cancel:before { content: '\e80b'; } /* '' */
-.icon-ok:before { content: '\e80c'; } /* '' */
-.icon-plus:before { content: '\e80d'; } /* '' */
-.icon-minus:before { content: '\e80e'; } /* '' */
-.icon-home:before { content: '\e80f'; } /* '' */
-.icon-download:before { content: '\e810'; } /* '' */
-.icon-gamepad:before { content: '\e811'; } /* '' */
-.icon-comment:before { content: '\e812'; } /* '' */
-.icon-phone:before { content: '\e813'; } /* '' */
-.icon-cog:before { content: '\e814'; } /* '' */
-.icon-cog-alt:before { content: '\e815'; } /* '' */
-.icon-attention:before { content: '\e816'; } /* '' */
-.icon-code:before { content: '\e817'; } /* '' */
-.icon-quote-left:before { content: '\e818'; } /* '' */
-.icon-quote-right:before { content: '\e819'; } /* '' */
+.icon-music:before { content: '\e805'; } /* '' */
+.icon-weibo:before { content: '\e813'; } /* '' */
+.icon-heart:before { content: '\e832'; } /* '' */
+.icon-star:before { content: '\e831'; } /* '' */
+.icon-picture:before { content: '\e803'; } /* '' */
+.icon-ok:before { content: '\e823'; } /* '' */
+.icon-cancel:before { content: '\e82f'; } /* '' */
+.icon-plus:before { content: '\e821'; } /* '' */
+.icon-minus:before { content: '\e822'; } /* '' */
+.icon-help-circled:before { content: '\e833'; } /* '' */
+.icon-info-circled:before { content: '\e824'; } /* '' */
+.icon-home:before { content: '\e830'; } /* '' */
+.icon-attach:before { content: '\e81c'; } /* '' */
+.icon-bookmark:before { content: '\e81d'; } /* '' */
+.icon-download:before { content: '\e837'; } /* '' */
+.icon-quote-left:before { content: '\e827'; } /* '' */
+.icon-quote-right:before { content: '\e828'; } /* '' */
+.icon-code:before { content: '\e801'; } /* '' */
+.icon-pencil:before { content: '\e829'; } /* '' */
+.icon-gamepad:before { content: '\e802'; } /* '' */
+.icon-comment:before { content: '\e804'; } /* '' */
+.icon-attention:before { content: '\e83b'; } /* '' */
+.icon-location:before { content: '\e806'; } /* '' */
+.icon-doc-text-inv:before { content: '\e81b'; } /* '' */
+.icon-phone:before { content: '\e808'; } /* '' */
+.icon-cog:before { content: '\e836'; } /* '' */
+.icon-cog-alt:before { content: '\e825'; } /* '' */
+.icon-lightbulb:before { content: '\e807'; } /* '' */
+.icon-block:before { content: '\e83a'; } /* '' */
+.icon-angle-left:before { content: '\e835'; } /* '' */
+.icon-mail-alt:before { content: '\e800'; } /* '' */
+.icon-angle-up:before { content: '\e82c'; } /* '' */
+.icon-angle-down:before { content: '\e82b'; } /* '' */
+.icon-angle-double-up:before { content: '\e82e'; } /* '' */
+.icon-angle-double-down:before { content: '\e82d'; } /* '' */
 .icon-desktop:before { content: '\e81a'; } /* '' */
-.icon-laptop:before { content: '\e81b'; } /* '' */
-.icon-tablet:before { content: '\e81c'; } /* '' */
-.icon-mobile:before { content: '\e81d'; } /* '' */
-.icon-floppy:before { content: '\e81e'; } /* '' */
-.icon-megaphone:before { content: '\e81f'; } /* '' */
-.icon-asterisk:before { content: '\e820'; } /* '' */
-.icon-coffee:before { content: '\e821'; } /* '' */
-.icon-css3:before { content: '\e822'; } /* '' */
-.icon-apple:before { content: '\e823'; } /* '' */
-.icon-android:before { content: '\e824'; } /* '' */
-.icon-bitbucket:before { content: '\e825'; } /* '' */
-.icon-codeopen:before { content: '\e826'; } /* '' */
-.icon-dropbox:before { content: '\e827'; } /* '' */
-.icon-drupal:before { content: '\e828'; } /* '' */
-.icon-github:before { content: '\e829'; } /* '' */
-.icon-gplus:before { content: '\e82a'; } /* '' */
-.icon-skype:before { content: '\e82b'; } /* '' */
-.icon-stackoverflow:before { content: '\e82c'; } /* '' */
-.icon-steam:before { content: '\e82d'; } /* '' */
-.icon-weibo:before { content: '\e82e'; } /* '' */
-.icon-twitter:before { content: '\e82f'; } /* '' */
-.icon-facebook-squared:before { content: '\e830'; } /* '' */
-.icon-angle-left:before { content: '\e831'; } /* '' */
-.icon-angle-right:before { content: '\e832'; } /* '' */
-.icon-angle-up:before { content: '\e833'; } /* '' */
-.icon-angle-down:before { content: '\e834'; } /* '' */
-.icon-angle-double-down:before { content: '\e835'; } /* '' */
-.icon-angle-double-up:before { content: '\e836'; } /* '' */
-.icon-location:before { content: '\e837'; } /* '' */
-.icon-attach:before { content: '\e838'; } /* '' */
-.icon-block:before { content: '\e839'; } /* '' */
-.icon-lightbulb:before { content: '\e83a'; } /* '' */
-.icon-pencil:before { content: '\e83b'; } /* '' */
-.icon-qrcode:before { content: '\e83c'; } /* '' */
-.icon-wordpress:before { content: '\e83d'; } /* '' */
-.icon-doc-text-inv:before { content: '\e83e'; } /* '' */
-.icon-html5:before { content: '\e83f'; } /* '' */
-.icon-linkedin-squared:before { content: '\e840'; } /* '' */
-.icon-globe:before { content: '\e841'; } /* '' */
-.icon-terminal:before { content: '\e842'; } /* '' */
-.icon-linux:before { content: '\e843'; } /* '' */
-.icon-beaker:before { content: '\e844'; } /* '' */
-.icon-calendar:before { content: '\e845'; } /* '' */
+.icon-laptop:before { content: '\e819'; } /* '' */
+.icon-tablet:before { content: '\e818'; } /* '' */
+.icon-mobile:before { content: '\e817'; } /* '' */
+.icon-globe:before { content: '\e838'; } /* '' */
+.icon-qrcode:before { content: '\e809'; } /* '' */
+.icon-ajust:before { content: '\e820'; } /* '' */
+.icon-asterisk:before { content: '\e839'; } /* '' */
+.icon-megaphone:before { content: '\e80b'; } /* '' */
+.icon-beaker:before { content: '\e80a'; } /* '' */
+.icon-coffee:before { content: '\e81f'; } /* '' */
+.icon-terminal:before { content: '\e826'; } /* '' */
+.icon-android:before { content: '\e80c'; } /* '' */
+.icon-apple:before { content: '\e80d'; } /* '' */
+.icon-css3:before { content: '\e80e'; } /* '' */
+.icon-facebook-squared:before { content: '\e80f'; } /* '' */
+.icon-github:before { content: '\e810'; } /* '' */
+.icon-gplus:before { content: '\e811'; } /* '' */
+.icon-html5:before { content: '\e812'; } /* '' */
+.icon-linkedin-squared:before { content: '\e81e'; } /* '' */
+.icon-linux:before { content: '\e82a'; } /* '' */
+.icon-skype:before { content: '\e816'; } /* '' */
+.icon-stackoverflow:before { content: '\e814'; } /* '' */
+.icon-twitter:before { content: '\e815'; } /* '' */
+.icon-angle-right:before { content: '\e834'; } /* '' */
