Update Copyright year & added teaser
OOoohhhh whats is the teaser? ;)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,14 +7,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="shortcut icon" href="favicon.ico"/>
-    <title>James Simonson | Web &amp; Games Developer</title>
+    <title>James Simonson | UI/UX Designer</title>
     <meta name="description" content="Web & Games developer living in Shanghai.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
 	<meta property="og:title" content="James Simonson | Web &amp; Games Developer">
 	<meta property="og:image" content="/img/og.jpg">
 	<meta property="og:description" content="Web & Games developer living in Shanghai.">
-	
+
     <link rel="stylesheet" href="/css/normalize.min.css">
     <link rel="stylesheet" href="/css/jamessimofont.css">
     <link rel="stylesheet" href="/css/main.css">
@@ -26,4 +26,3 @@
 <![endif]-->
 
 <!--<p class="shoutbox"><i class="icon-megaphone">Announcement:</i> GOOD NEWS! <a href="http://jamessimo.github.io/Commuter-Fling/">Commuter Fling!</a> has just been <strong>launched</strong> on the google play store! <a id="close-shout" href="#"><i class="icon-cancel"></i><i class="icon-megaphone"></i></a></p>-->
-	
