--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,9 +11,6 @@
 	font-weight: bold;
 }
 
-
-
-
 //COLOURS
 $red: #DB4437;
 $sunset: #F05722;
@@ -42,7 +39,7 @@ textarea {
     font-size: 0.8em;
     line-height: 1.4;
     background: $white;
-    
+
 }
 
 ::-moz-selection {
@@ -56,7 +53,9 @@ textarea {
     text-shadow: none;
     color: $white;
 }
-
+a:focus {
+  outline: none;
+}
 h1 {
 	font-size: 200%;
 	font-weight: 100;
@@ -69,7 +68,7 @@ h2 {
 
 a {
 	color: $white;
-	text-decoration: none; 
+	text-decoration: none;
 }
 
 p {
@@ -218,7 +217,7 @@ article {
 		padding: 10px 0;
 		color: white;
 		float: left;
-			
+
 		&.html {
 			background-color: $orange;
 		}
@@ -286,7 +285,7 @@ article {
 			}
 			&:before,
 			&:after{
-				content: '';		
+				content: '';
 				position: absolute;
 				left: 100%;
 				width: 0;
@@ -310,7 +309,7 @@ article {
 		span{
 			left: 158%;
 			&.long{
-				
+
 				left: 158%;
 			}
 			&:before,
@@ -330,7 +329,7 @@ article {
 	background: url(/img/me.jpg) no-repeat center;
 	max-width: 1150px;
 	width: 100%;
-	
+
 	.centertext {
 		width: 200px;
 		height: 60px;
@@ -377,7 +376,7 @@ article {
 			i {
 				 -webkit-animation: wobble 0.8s;
 				 animation: wobble 0.8s;
-			
+
 			}
 			opacity: 1;
 		}
@@ -425,7 +424,7 @@ article {
 		padding-top: 10px;
 		&:hover .showover{
 			display: inline;
-		}	
+		}
 	}
 	#wechatqrcode{
 		max-width: 430px;
@@ -436,13 +435,13 @@ article {
 		display: none;
 		transition: all 0.8s ease-in-out;
 		top: 0;
-			
+
 		img{
 			width: 100%;
 			height: 100%;
 		}
 		&.show{
-			display: block;	
+			display: block;
 		}
 	}
 }
@@ -465,7 +464,7 @@ article {
 		text-align: center;
 		background: $burgundy;
 	}
-	a { 
+	a {
 		color: $sunset;
 	}
 	.subtitle {
@@ -496,7 +495,7 @@ article {
 	}
 	.subtitle {
 		color: $white;
-		background: $burgundy;	
+		background: $burgundy;
 	}
 	.history {
 		padding: 0 0 10px 0;
@@ -541,7 +540,7 @@ article {
 		animation: hue 1s infinite linear;
 		margin: 200px 0;
 	}
-	i, 
+	i,
 	.hand {
 		display: none;
 	}
@@ -562,7 +561,7 @@ footer {
 			i {
 				 -webkit-animation: tada 0.8s;
 				 animation: tada 0.8s;
-			
+
 			}
 		}
 	}
@@ -646,7 +645,7 @@ footer {
 	ul{
 		font-size: 110%;
 	}
-	
+
 	.subtitle {
 		color: $white;
 		background: $navy;
@@ -654,13 +653,13 @@ footer {
 			color: $grey;
 		}
 	}
-	
+
 	.backblog{
 		float: left;
 		a{
 			color: $grey;
 		}
-		
+
 	}
 
 	.date{
@@ -721,8 +720,8 @@ footer {
 		#wechatqrcode{
 			box-shadow: 0px 0px 40px $black;
 			.arrow-down{
-				width: 0; 
-				height: 0; 
+				width: 0;
+				height: 0;
 				border-left: 20px solid transparent;
 				border-right: 20px solid transparent;
 				border-bottom: 20px solid $white;
@@ -899,7 +898,7 @@ footer {
 			}
 			&:hover span,
 			&.show span{
-				
+
 				-webkit-transform: scale(1);
 				-ms-transform: scale(1);
 				transform: scale(1);
@@ -909,7 +908,7 @@ footer {
 				display: block
 			}
 		}
-		
+
 	}
 	.coming-soon {
 		height: 430px;
@@ -971,7 +970,7 @@ footer {
 			    top: 45px;
 			    animation: hue 5s infinite linear;
 			    -webkit-animation: hue 5s infinite linear;
-			    
+
 		    }
 		   animation: rotatingcw 10s infinite linear;
 		   -webkit-animation: rotatingcw 10s infinite linear;
@@ -1064,7 +1063,7 @@ footer {
 /* ==========================================================================
    Animations "Thanks animate.css! ~ https://github.com/daneden/animate.css"
    ========================================================================== */
-   
+
 //Pulse
 @-webkit-keyframes pulse {
   0% {
@@ -1442,6 +1441,3 @@ footer {
     -webkit-transform: rotate(-360deg);
   }
 }
-
-
-
