--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,12 +9,12 @@ layout: default
 <h1>{{ page.title }}</h1>
 <ul class="tags">
     {% for tag in page.tags %}
-    <li class="tag"><a href="/tag/{{ tag }}" title="all {{ tag }} posts">#{{ tag }}</a></li>
+    <li class="tag"><a disabled="/tag/{{ tag }}" title="all {{ tag }} posts">#{{ tag }}</a></li>
     {% endfor %}
 </ul>
-
+<div class="post-content">
 {{ content }}
-
+</div>
 <p class=""><a href="/blog"><i class="icon-angle-left"></i> back to blog </a></p>
 </article>
 
