Update blog stuff
naughty lunch update

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="shortcut icon" href="favicon.ico"/>
     <title>James Simonson | UI/UX Designer</title>
-    <meta name="description" content="Web & Games developer living in Shanghai.">
+    <meta name="description" content="Web & Games developer living in Suzhou, China.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<meta property="og:title" content="James Simonson | Web &amp; Games Developer">
 	<meta property="og:image" content="/img/og.jpg">
-	<meta property="og:description" content="Web & Games developer living in Shanghai.">
+	<meta property="og:description" content="Web & Games developer living in Suzhou, China..">
 
     <link rel="stylesheet" href="/css/normalize.min.css">
     <link rel="stylesheet" href="/css/jamessimofont.css">
