--- a/sass/main.scss
+++ b/sass/main.scss
@@ -225,6 +225,7 @@ ul {
 }
 
 .opener {
+  overflow: hidden;
 	h1,h2 {
 		color: $white;
 		padding: 10px;
@@ -245,13 +246,16 @@ article {
 }
 
 .frontendlist {
-	padding-top: 434px;
+	padding-top: 428px;
 }
 #show-all{
 	display: none;
 }
 .frontendlist,
 .backendlist {
+  position: relative;
+  z-index: 1;
+
 	li {
 		width: 50%;
 		padding: 10px 0;
@@ -363,6 +367,21 @@ article {
 		}
 	}
 }
+#svgAnim {
+  height:0px;
+  margin: auto -100%;
+  transform: scale(0.69);
+  transition: opacity 1s ease-out;
+  position: relative;
+
+  g path{
+    //opacity: 0;
+    fill-opacity: 0;
+    stroke: #f9f9f9;
+    stroke-opacity: 0;
+    transition: fill-opacity 0.3s ease-out;
+  }
+}
 
 .my-body {
 	height: 700px;
@@ -383,6 +402,7 @@ article {
 }
 
 .about {
+  position: relative;
 	background-color: $red;
 	color: $white;
 	padding: 5px 0 10px 0;
@@ -762,7 +782,7 @@ footer {
 		width: 90%;
 	}
 	.frontendlist {
-		padding-top: 406px;
+		padding-top: 390px;
 	}
 	.about {
 		padding: 15px 0 30px 0;
@@ -916,6 +936,8 @@ footer {
 //WIDE SCREEN
 @media only screen and (min-width: 980px) {
 	#show-all{
+
+    z-index: 10;
 		color: #ccc;
 		display: inline;
 		text-align: center;
