--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,10 +39,12 @@ textarea {
     font-family: 'Open Sans', sans-serif;
     font-size: 0.8em;
     line-height: 1.4;
-    background: $white;
+    background: $black;
 
 }
-
+body {
+    background: $white;
+}
 ::-moz-selection {
     background: $blue;
     text-shadow: none;
