--- a/sass/main.scss
+++ b/sass/main.scss
@@ -620,6 +620,9 @@ footer {
 	background-color: $black;
 	color: $white;
 	padding: 1px 0;
+  .wrapper {
+    padding-bottom: 1em;
+  }
 	p{
 		margin-bottom: 0.5em;
 	}
@@ -941,7 +944,7 @@ footer {
 //WIDE SCREEN
 @media only screen and (min-width: 980px) {
 	#show-all{
-
+    width: 0;
     z-index: 10;
 		color: #ccc;
 		display: inline;
