--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="shortcut icon" href="favicon.ico"/>
-    <title>James Simonson | UI/UX Designer</title>
-    <meta name="description" content="Web & Games developer living in Suzhou, China.">
+    <title>James Simonson | UX/UI Designer</title>
+    <meta name="description" content="UX designer &amp; developer living in Suzhou, China.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="James Simonson | Web &amp; Games Developer">
+	<meta property="og:title" content="James Simonson | UX designer &amp; developer">
 	<meta property="og:image" content="/img/og.jpg">
-	<meta property="og:description" content="Web & Games developer living in Suzhou, China..">
+	<meta property="og:description" content="UX designer &amp; developer living in Suzhou, China.">
 
     <link rel="stylesheet" href="/css/normalize.min.css">
     <link rel="stylesheet" href="/css/jamessimofont.css">
@@ -21,8 +21,4 @@
     <link rel="stylesheet" href="/css/syntax.css">
 </head>
 <body>
-<!--[if lt IE 9]>
-<p class="browsehappy">HEY! Thanks for visiting my site, unfortunately you seem to be using an <strong>outdated</strong> browser.<br/>Please <a href="http://browsehappy.com/">upgrade your browser</a> to view my site they way it was meant to be viewed.</p>
-<![endif]-->
-
 <!--<p class="shoutbox"><i class="icon-megaphone">Announcement:</i> GOOD NEWS! <a href="http://jamessimo.github.io/Commuter-Fling/">Commuter Fling!</a> has just been <strong>launched</strong> on the google play store! <a id="close-shout" href="#"><i class="icon-cancel"></i><i class="icon-megaphone"></i></a></p>-->
