--- a/_includes/homefooter.html
+++ b/_includes/homefooter.html
@@ -10,7 +10,7 @@
 		    <h2>Drop me a line</h2>
 	    	<a id="email" title="email" href="mailto:jamessimo@outlook.com?subject=Hi James!" class="icon-mail-alt"></a>
 	    	<a id="twitter" title="twitter" href="https://twitter.com/james_simo" class="icon-twitter" target="_blank"></a>
-	    	<a id="gplus" title="google plus" href="https://plus.google.com/107967684340447771271/" class="icon-gplus" target="_blank"></a>
+	    	<!--<a id="gplus" title="google plus" href="https://plus.google.com/107967684340447771271/" class="icon-gplus" target="_blank"></a>-->
 	    	<a id="linkedin" title="linkedin" href="https://www.linkedin.com/pub/james-simonson/94/b/51b" class="icon-linkedin-squared" target="_blank"></a>
 	    	<a id="github" title="github" href="https://github.com/jamessimo" class="icon-github" target="_blank"></a>
 	    	<div style="display: inline; position:relative;"><a id="wechat" title="wechat" href="#" class="icon-wechat"></a>
@@ -29,7 +29,7 @@
 	<footer>
     	<div class="wrapper">
     		<p>site conceived, designed, implemented, tested and delivered by <strong>James Simonson</strong> 2019</p>
-    		<small>hosted on<a title="Github is awesome!" href="https://pages.github.com/" target="_blank"> github <i class="icon-github"></i></a> &amp; powered by <a href="http://jekyllrb.com/" target="_blank">jeykll</a></small>
+    		<small>hosted on<a title="Github is awesome!" href="https://pages.github.com/" target="_blank"> github <i class="icon-github"></i></a> &amp; powered by <a href="http://jekyllrb.com/" target="_blank">jekyll</a></small>
     	</div>
     </footer>
 
