Updated my Twitter handle
NO MORE _ I HAPPY NOW

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<section class="contact">
 		<article>
 			<a id="email" title="email" href="mailto:jamessimo@outlook.com?subject=Hi James!" class="icon-mail-alt"></a>
-			<a id="twitter" title="twitter" href="https://twitter.com/james_simo" class="icon-twitter" target="_blank"></a>
+			<a id="twitter" title="twitter" href="https://twitter.com/jamessimo" class="icon-twitter" target="_blank"></a>
 			<!--<a id="gplus" title="google plus" href="https://plus.google.com/107967684340447771271/" class="icon-gplus" target="_blank"></a>-->
 			<a id="linkedin" title="linkedin" href="https://www.linkedin.com/pub/james-simonson/94/b/51b" class="icon-linkedin-squared" target="_blank"></a>
 			<a id="github" title="github" href="https://github.com/jamessimo" class="icon-github" target="_blank"></a>
