--- a/sass/main.scss
+++ b/sass/main.scss
@@ -143,6 +143,13 @@ textarea {
 	i {
 		opacity: 0.7;
 	}
+  &.shinetech{
+      background: $white;
+      color: $black;
+      a {
+        color: $red;
+      }
+  }
 
   .announceText{
     display: inline-block;
@@ -154,6 +161,7 @@ textarea {
   .mediumLogo{
     display: inline-block;
     padding: 10px;
+    margin-bottom: 15px;
     a {
       display: flex;
     }
@@ -1017,6 +1025,9 @@ footer {
 		}
 
 	}
+  .mediumLogo{
+    margin-bottom: 0 !important;
+  }
   //post
   .post-content{
     width:80%;
